force-app/main/default/objects/LWC_Chat__e/LWC_Chat__e.object-meta.xml
<CustomObject>
    <label>LWC Chat</label>
    <pluralLabel>LWC Chat</pluralLabel>
</CustomObject>