force-app/main/default/objects/LWC_Chat__e/fields/ChatUserId__c.field-meta.xml
<CustomField>
    <fullName>ChatUserId__c</fullName>
    <description>user connection id</description>
    <label>ChatUserId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>