force-app/main/default/objects/LWC_Chat__e/fields/ChatUserName__c.field-meta.xml
<CustomField>
    <fullName>ChatUserName__c</fullName>
    <description>Chat user name</description>
    <label>ChatUserName</label>
    <length>64</length>
    <type>Text</type>
</CustomField>