force-app/main/default/objects/LWC_Chat__e/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>message content</description>
    <label>Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>