force-app/main/default/objects/LWC_Chat__e/fields/MessageType__c.field-meta.xml
<CustomField>
    <fullName>MessageType__c</fullName>
    <description>join, leave, comment...</description>
    <label>MessageType</label>
    <length>100</length>
    <type>Text</type>
</CustomField>