force-app/main/default/objects/LWC_Chat__e/fields/ProfileImageType__c.field-meta.xml
<CustomField>
    <fullName>ProfileImageType__c</fullName>
    <description>url or color</description>
    <label>ProfileImageType</label>
    <length>20</length>
    <type>Text</type>
</CustomField>