force-app/main/default/objects/LWC_Chat__e/fields/ProfileImageValue__c.field-meta.xml
<CustomField>
    <fullName>ProfileImageValue__c</fullName>
    <description>User profile image url or color code</description>
    <label>ProfileImageValue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>